src/style/index.css
@import "tailwindcss";

/* Hide scrollbar arrows */
.custom-scroll::-webkit-scrollbar-button {
    display: none;
}

.custom-scroll {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.custom-scroll::-webkit-scrollbar {
    display: none;
}

.custom-scroll-footer {
    overflow-x: auto;

    /* Firefox */
    scrollbar-width: thin;
    scrollbar-color: rgba(114, 114, 114, 0.2) transparent;
}

/* Chrome, Edge, Safari */
.custom-scroll-footer::-webkit-scrollbar {
    height: 3px;
    /* very thin */
}

.custom-scroll-footer::-webkit-scrollbar-track {
    background: transparent;
}

.custom-scroll-footer::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, 0.2);
    /* low visibility */
    border-radius: 10px;
}

/* Remove arrows completely */
.custom-scroll-footer::-webkit-scrollbar-button {
    display: none;
}


@layer base {

    input:-webkit-autofill,
    input:-webkit-autofill:hover,
    input:-webkit-autofill:focus,
    textarea:-webkit-autofill {
        -webkit-box-shadow: 0 0 0px 1000px #161616 inset;
        -webkit-text-fill-color: white;
        caret-color: white;
    }
}

